# Spark

./: .gitignore  Cargo.toml
doc/: lang.md  syntax.ebnf
src/: lib.rs
src/parse/lex/: chars.rs  mod.rs
src/parse/lex/tok/: mod.rs  number.rs  text.rs
src/shared/operator/: arith.rs  bit.rs  logic.rs  mod.rs
src/source/: mod.rs  span.rs
