[package]
name = "spark"
version = "0.12.0"
authors = ["<bkliebmann@gmail.com>"]
edition = "2021"

[lib]
name = "spark"
path = "src/lib.rs"

[[bin]]
name = "sparkc"
path = "src/bin/sparkc.rs"


[dependencies]
slotmap = "1.0"

clap = "4.5"

codespan-reporting = "0.11"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }

thiserror = "1.0"

[profile.release]
codegen-units = 1
# lto = true
panic = 'abort'
